@@ -1,18 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX gorg-0.6.3-prefix.patch 10270 RMD160 c9a822fbc2564a81afdf7da1cc9238406a1c7640 SHA1 b8cfed0d1e3f4e13eccde80f62b93a1c7b56baf5 SHA256 b7c37dfc895281e9f7b5bd4e6c91dc435dad0d60d9ed914e4b9af177386e56f7
-AUX gorg-0.6.4-prefix.patch 9102 RMD160 caa1cb07b6b596a8b45dd2c296a5955e5f2e7fc0 SHA1 06bda5a64f0e6a846e190ce17aab31db61ec4d77 SHA256 43baeb9b13ebceac3e0b8634950cff9a17699c733aa887b01a264d8657ec50cd
-AUX gorg-0.6.4-ruby19-date.patch 1010 RMD160 3a10f6299cc71a6a4a0ff4b68f5799a7c3883964 SHA1 6425fb286c03a1c7331ca067bdee4c232dff333f SHA256 820a263c3c9081a48bbcf768cab1a076038c41f680cb0115aca46d6a357b775c
-AUX gorg-0.6.4-ruby19.patch 6507 RMD160 705fc3466979f76d4f6e1754cbbfbd4c81ed9b81 SHA1 acf0e374320743945d12255a15196c908744d780 SHA256 da04a3da7112a06e9555d99153625455049392ec4b820a04c2aaebfd031284b9
-DIST gorg-0.6.4.tgz 56811 RMD160 ee7fc8d2363dbef654885de6a8383d50242bc51f SHA1 7f8bc3682be295219b0105f526686db7f46e586b SHA256 8ed0fa7da62aa16e58424943d87573bedb3fbab63fdf037eabbbbf470d57c18e
-EBUILD gorg-0.6.4-r1.ebuild 1979 RMD160 e667749b4b722007a658df8fb45ce6977705b933 SHA1 861c8dac8266a150f00046071e3be252c6d29aad SHA256 22e8f474c4d0f598fd7f9c198799fcd6542bd688290f75804011151b68ebcad7
-MISC ChangeLog 4958 RMD160 5b8b8b3dddf27bf05762a592b1942ec94761dbd4 SHA1 66100de1568cdaa55b5eb236131bf3cee99aef6f SHA256 98be009de0eea702de233f05213c404bf7d1264ac99f6b9ab1f10298f06e0ea4
-MISC metadata.xml 663 RMD160 c73e4a58b69b296262f3429b3ed19744ed54fffe SHA1 33d256015499692c85eac2fbebc0751279da170e SHA256 942eae02575f6f4ad751b5939379fa367eb55a081b04ef515aa7627bd97984ac
+AUX gorg-0.6.3-prefix.patch 10270 SHA256 b7c37dfc895281e9f7b5bd4e6c91dc435dad0d60d9ed914e4b9af177386e56f7 SHA512 01e91334f71774877bd44984060e4f54234442e706dbd22b1b05b973bda7642905e165ca984894ceb273826b4e982f41c7cde0695b2a48d0cecea8803ed3fd43 WHIRLPOOL 381fca740d5ecada46611f719db968b0f01443ed2d7811199121041308501767810ed0cf3eb8befbddfa7e9923ae1c3dbd797316ab3ede56210f7654563109c1
+AUX gorg-0.6.4-prefix.patch 9102 SHA256 43baeb9b13ebceac3e0b8634950cff9a17699c733aa887b01a264d8657ec50cd SHA512 572cad00ce84137b1c6a1d34930ffd8c3591130c7d7f26fd8dc0ba9bb2548bb8e5e8cec4f42ea521a5351cb647344d50b241b387983a9efca00f6d1dabfdff7b WHIRLPOOL fb7d1917894e911c068a494bff6bcf7878219a40b63b40011ef069d8ede84cfd3554846d57952097f90d6f0415bcfbe5a5294216d2a81d96a601237afcc84aa4
+AUX gorg-0.6.4-ruby19-date.patch 1010 SHA256 820a263c3c9081a48bbcf768cab1a076038c41f680cb0115aca46d6a357b775c SHA512 ea68f6f7ea028fa9f74d99784d98a1619f4f5e3c454dd6582dc110d4cb3b9383adb652cf14731dbb9dd113455c30f6c6b5a7afa74ba6fc0c00de0d597a0a5173 WHIRLPOOL 04a81d72ab0f2cdf1b99e857317543a3a274791302974fb5b8dbffc840fc48a0bdd1e3cf3e6bd8d989adf986c92278fde0724c00ac2a4d1bbfa688d1957f77c5
+AUX gorg-0.6.4-ruby19.patch 6507 SHA256 da04a3da7112a06e9555d99153625455049392ec4b820a04c2aaebfd031284b9 SHA512 38f20628a828f343765e10bbae75c71d6d4b31249dcaead9545eb9a580372a43cb1f0482cad3a494263572ede157cb317328657ad30da4a0832ee6fb7e286104 WHIRLPOOL 708e48bed484566642270083d06bc94b91accf25113b5601d3c8622fd9ea7e6deff454f81ffa31429b701b61c1e33adedf99f11b079a9c79fe8b59eb8ea8ddc1
+DIST gorg-0.6.4.tgz 56811 SHA256 8ed0fa7da62aa16e58424943d87573bedb3fbab63fdf037eabbbbf470d57c18e SHA512 838f859f3350cf8bd1b874515d08b3bfc1b49abff6c4b5e4d9c9a986687014f1645eded588b0e8415c4bf30a56cc197f3abeb131a3fdc06d2f0fb948bd774494 WHIRLPOOL 4a40f032a50c0f6f4e366985b12821ea0c9eb53355717e308d4a345084885bec14c38e8478792d3f9b2380ffa68b198163e360cb3bb3bc750b17a5fdf5f764f0
+EBUILD gorg-0.6.4-r1.ebuild 1972 SHA256 064984fae9db7c542297dbf9331b1437432c8c92dfeb25b113c8fe540d2b9e0c SHA512 3d4289d683ee8c48906d98cd6dc2cc1de785f80c83dbce3d6d66462c447987365989ae99b8987e1ac31071ef3475e75906d0bc341fb6fc4da4f14a376977342d WHIRLPOOL aae67c3ac7ac99d3cf631ee87d2719661655f071649ffa9241b98159f486baf8e5ca6543be5a6e08603f45a2ec4d2861efefcc02990dc843e7d119fa82e8f07a
+MISC ChangeLog 5192 SHA256 4714533ee71e467c62ddc3cf24fc81732405fd45f343e150b1fc625534084d13 SHA512 02d323a9e30af4505b80b015f97fab13fd6b7073e603594c8c231d06603a3437e1c1aed33e86d93779d71ef83bafba14948406f38244258389f43aa474536890 WHIRLPOOL 2378f041e991e32fa6df9169d7881b1607ce492dc6e007971beac3ce43c17d33f0ca2324dfe742ba5b86997f4adb17fc638cb14510b12407cf12a9f8484c9386
+MISC metadata.xml 663 SHA256 942eae02575f6f4ad751b5939379fa367eb55a081b04ef515aa7627bd97984ac SHA512 383562141bf1be2772928443ff72679e2b1a81a0075d1e9002f250fa51832e57b7af603adb1f90c781f01d10fe35093796bbfb916c5042f6d70741166ea88858 WHIRLPOOL 0956ebe892b41804cc0636a8bd5562bd9fea6997653d8fcec8540449110254dc812b8d8ac406af71dbba84d022ad3d5b05c26ae81bb28997d2f4a4803273416d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/A7jQACgkQX3X2B8XHTomh4gCdFSPwyDTctccvR45WLO8e34R6
-jTIAn3bRc81jjzImN8qqELSItwgkLw83
-=jUgu
+iEYEAREIAAYFAlCLwlIACgkQX3X2B8XHTolYYACbBTRW9CXAYT/jvbYobUSFehlS
+EWoAoJgLziXGn5YNUEXBWLQKJBHtikEe
+=YTkE
 -----END PGP SIGNATURE-----
